--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - 'main'
   schedule:
-    - cron: "0 2 * * 1-5"
+    - cron: "0 2 * * 1"
 
 jobs:
   deploy-to-co-cyber-security-external:
@@ -32,5 +32,5 @@ jobs:
           aws-region: eu-west-2
 
       - name: Run Makefile
-        run: (cd ${{ github.action_path }} && make deploy)
+        run: ${{ github.action_path }}/deploy.sh
         shell: bash
