--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
           aws-region: eu-west-2
 
       - name: Run Makefile
-        run: ${{ github.action_path }}/deploy.sh
+        run: ls ${{ github.action_path }} -lsa
         shell: bash
